--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -4,9 +4,17 @@
         <servlet-name>NewServlet</servlet-name>
         <servlet-class>Controller.NewServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>SpeciesController</servlet-name>
+        <servlet-class>Controller.SpeciesController</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>NewServlet</servlet-name>
         <url-pattern>/NewServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>SpeciesController</servlet-name>
+        <url-pattern>/SpeciesController</url-pattern>
     </servlet-mapping>
     <session-config>
         <session-timeout>
